<resources>
    <string name="app_name">WaeeFirst</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  activity_main  -->
    <string name="greeting">Hello World</string>
    <string name="et_name_hint">Please type your name</string>
    <string name="btn_hello">Say Hi</string>
    <string name="cb_apple">Apple</string>
    <string name="cb_orange">Orange</string>
    <string name="cb_banana">Banana</string>
    <string name="fruit_alert_dialog_title">Selected Fruits</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="btn_select_date">Select Date</string>
    <string name="btn_select_time">Select Time</string>

    <!--  activity_ui_homework   -->
    <string name="tv_title">Your Review</string>
    <string name="tv_price">$5.58</string>
    <string name="tv_route">Sanchaung to LMD today at 2:00 PM</string>
    <string name="tv_driver_name">John Wick</string>
    <string name="btn_send">Send</string>
    <string name="tv_name">WaeWaee Saw</string>
    <string name="tv_position">Senior Mobile Developer</string>
    <string name="tv_company">PADC Myanmar</string>
    <string name="tv_text_overlapped">This text is on top!!!</string>


    <string name="et_password_hint">Enter your password</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lacinia pellentesque leo, id imperdiet eros rhoncus id. Cras aliquet pellentesque nisi, a condimentum enim. Vestibulum ac aliquet magna. Donec efficitur id risus sed porta. Ut hendrerit et velit bibendum ultricies. Donec congue ut dolor nec dignissim. Integer suscipit nunc quis risus facilisis, vel rutrum lectus maximus. Maecenas sed posuere tortor, ut interdum elit. Mauris tempus urna ut purus placerat, sit amet faucibus tellus vestibulum. Vestibulum mi erat, gravida rhoncus eros nec, facilisis scelerisque sem. Aenean justo lorem, dapibus pharetra lacus eu, efficitur luctus dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean pharetra nulla lorem, convallis semper erat dictum et. Mauris purus odio, porta quis orci vitae, tincidunt commodo mauris. Mauris non suscipit nisi.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar nunc maximus felis suscipit lacinia. Nulla sollicitudin semper neque. Nunc blandit, justo sed finibus varius, augue leo mattis nulla, id porttitor justo eros vitae ligula. In vel nibh sollicitudin, tristique metus vel, eleifend elit. Aliquam nec dictum lorem. Duis fringilla, augue ac ultricies finibus, nibh eros vehicula quam, non bibendum ante enim congue elit. Cras nec ultrices augue, et porttitor ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer mattis massa at semper porta. Sed facilisis tempus consequat. Sed dictum magna ut est egestas, et sagittis mi ultrices. Cras placerat sem est, quis semper felis posuere sit amet. Vivamus scelerisque tempor sapien a pretium. In eu enim vulputate erat posuere tempus at vel lacus. Fusce laoreet tempus orci. Donec leo augue, aliquam eu mauris sit amet, tempor aliquam orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar nunc maximus felis suscipit lacinia. Nulla sollicitudin semper neque. Nunc blandit, justo sed finibus varius, augue leo mattis nulla, id porttitor justo eros vitae ligula. In vel nibh sollicitudin, tristique metus vel, eleifend elit. Aliquam nec dictum lorem. Duis fringilla, augue ac ultricies finibus, nibh eros vehicula quam, non bibendum ante enim congue elit. Cras nec ultrices augue, et porttitor ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer mattis massa at semper porta. Sed facilisis tempus consequat. Sed dictum magna ut est egestas, et sagittis mi ultrices. Cras placerat sem est, quis semper felis posuere sit amet. Vivamus scelerisque tempor sapien a pretium. In eu enim vulputate erat posuere tempus at vel lacus. Fusce laoreet tempus orci. Donec leo augue, aliquam eu mauris sit amet, tempor aliquam orci.</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="news_metadata">6 Likes - 3 Comments - 6 Shares</string>
    <string name="news_brief">Ms. Heard has accused Mr. Depp of a “pattern” of violence that tended to involve him lashing out at her when he was under the influence of drugs or alcohol. She testified that Mr. Depp\'s anger would often escalate into physical attacks after he accused her of cheating on him, despite her denials. \n\n See more</string>
    <string name="news_date_time">May 24 2022 - 02:10 PM</string>
    <string name="news_details">\t She described an incident in 2015 when the couple was in Australia for the filming of the fifth “Pirates of the Caribbean” movie in which she said that Mr. Depp beat her and then sexually assaulted her with a bottle after taking the drug MDMA. Ms. Heard said he had been angry about several issues, including his suspicion that she had been having an affair with another actor. \n\n\t She testified that Mr. Depp became “belligerent” and attacked her, hitting her in the face, throwing her across the room, ripping off her nightgown and grabbing her by the neck. She said he injured his finger when he grabbed a phone off the wall and smashed it into smithereens. \n\n\t “I’m looking in his eyes and I don’t see him anymore,” Ms. Heard, who sometimes broke into sobs during her testimony, said. “I’ve never been so scared in my life. \n\n\t Mr. Depp told a drastically different story about the couple’s relationship and testified that he had never struck Ms. Heard, or any other woman. Instead, he asserted that Ms. Heard was the aggressor in the relationship, engaging in angry tirades and “demeaning name-calling” that would often escalate into physical violence.</string>
</resources>