<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading_1x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_medium_2"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_price"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading_2x"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="@dimen/margin_large"/>

    <TextView
        android:id="@+id/tvRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        android:layout_marginTop="@dimen/margin_medium"/>

<!--
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pic1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        android:layout_marginTop="@dimen/margin_xxlarge"/>
-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfileRound"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pic3"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRoute"
        android:layout_marginTop="@dimen/margin_card_medium_2" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_driver_name"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileRound"
        android:layout_marginTop="@dimen/margin_card_medium_2"/>
    
    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginTop="@dimen/margin_medium"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/bg_round_button"
        app:layout_constraintTop_toBottomOf="@id/rbRating"
        android:layout_marginTop="@dimen/margin_xxlarge"/>

</androidx.constraintlayout.widget.ConstraintLayout>