<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_medium"
        android:elevation="@dimen/margin_medium"
        android:layout_margin="@dimen/margin_medium_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium_2">

            <ImageView
                android:id="@+id/ivNewsLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/news_logo"/>

            <TextView
                android:id="@+id/tvNewsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eleven Media"
                android:textSize="@dimen/text_regular_3x"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/ivNewsLogo"
                android:layout_marginStart="@dimen/margin_medium"/>

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_date_time"
                android:textSize="@dimen/text_small"
                android:layout_below="@id/tvNewsTitle"
                android:layout_alignStart="@id/tvNewsTitle"
                android:layout_marginTop="@dimen/margin_medium"/>

            <ImageView
                android:id="@+id/ivLove"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/heart"
                android:clickable="true"
                android:foreground="@drawable/bg_ripple_primary"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/tvNewsBrief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_brief"
                android:textColor="@color/black"
                android:layout_below="@id/ivNewsLogo"/>

            <ImageView
                android:id="@+id/ivNewsImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/news_image"
                android:scaleType="centerCrop"
                android:layout_below="@id/tvNewsBrief"
                android:layout_marginTop="@dimen/margin_large"/>

            <TextView
                android:id="@+id/tvMetadata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_metadata"
                android:layout_below="@id/ivNewsImage"
                android:layout_marginTop="@dimen/margin_medium"/>

            <LinearLayout
                android:id="@+id/llCommentAndShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMetadata"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Comment"
                    android:drawableStart="@drawable/ic_comment"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_medium_3"/>

                <TextView
                    android:id="@+id/tvShare"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Send to"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_medium_3"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>